syntax = "proto3";

package calculatorPb;

option go_package = "github.com/SarathLUN/udemy-grpc-go-course/calculator-square-root/calculatorPb;calculatorPb";

message SquareRootRequest{
    int32 number = 1;
}

message SquareRootResponse{
    double number_root = 1;
}

service CalculatorService {
    // error handling
    // this RPC will throw an exception if the sent number is negative
    // the error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){};
}